--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@
   <div class="contenedor" align="center">
     <div class="col-md-12">
       <form>
-        <input type="radio" id="cupones10" name="cupones" value="diez">
-        <label for="male">Cliente de Oro</label>
+        <input type="radio" id="cupones10" name="cupones" value="Oro">
+        <label for="Oro">Cliente de Oro</label>
         <img src="https://www.credijamar.com.co/cliente-oro/images/oro.png" width="20% " height="20% " >
-        <input type="radio" id="cupones20" name="cupones" value="veinte">
-        <label for="female">Cliente Platinum</label>
+        <input type="radio" id="cupones20" name="cupones" value="Platinum">
+        <label for="platinum">Cliente Platinum</label>
         <img src="https://automodelismotanaka.weebly.com/uploads/1/8/9/6/18963177/2454469.jpg?368" width="20% " height="20% " >
+        <input type="radio" id="sinCupon" name="cupones" value="Nuevo" checked="checked">
+        <label for="no">Soy un nuevo cliente</label>
       </form>
     </div>
     <div class="col-md-12">
@@ -57,8 +59,10 @@
       <input type="button" class="button" id="play" value="Calcular el precio de mi Pedido"/>
     </div>
   </div>
-  <div class="contenedor">
-    <div id="resultado"></div>
+  <div class="contenedor" align="center">
+    <div id="resultado">
+
+    </div>
   </div>
   <footer class="footer">
     <h3>Elaborado por Luis Alberto Luisjuan Guerrero, Septiembre 2020 </h3>
